# DreamConverter

./: .gitignore  .gitmodules  CMakeLists.txt  CPackInstaller.cmake  CopySmmh.cmake  Makefile
.github/workflows/: build.yml
include/: convert_dream.hpp  file_hash_details.hpp  file_hash_info.hpp  file_hash_region.hpp  file_hash_revision.hpp  generated_offsets.hpp  offsets_logic.hpp  revision_checker.hpp  save_land_my_design.hpp  save_land_time.hpp  save_main_field.hpp  save_npc.hpp  save_npc_house_list.hpp  save_player_house_list.hpp  save_shop.hpp  save_struct.hpp  savefile.hpp  smmh_paths_by_revision.hpp  template_check.hpp  util.hpp
libs/: CMakeLists.txt  add_lib_acnh.cmake
libs/core/: CMakeLists.txt
libs/core/save_structs/: CMakeLists.txt
libs/core/save_structs/include/save_structs/: buffer_converter.hpp  save_land_my_design.hpp  save_land_time.hpp  save_main_field.hpp  save_npc.hpp  save_npc_house_list.hpp  save_player_house_list.hpp  save_shop.hpp  save_struct.hpp  save_struct.inl
libs/core/save_structs/source/: buffer_converter.cpp  save_land_my_design.cpp  save_land_time.cpp  save_main_field.cpp  save_npc.cpp  save_npc_house_list.cpp  save_player_house_list.cpp  save_shop.cpp  save_struct.cpp
libs/core/savefile/: CMakeLists.txt
libs/core/savefile/include/savefile/: file_hash_details.hpp  file_hash_info.hpp  file_hash_revision.hpp  revision_checker.hpp  savefile.hpp
libs/core/savefile/source/: savefile.cpp
libs/core/util/: CMakeLists.txt
libs/core/util/include/util/: util.hpp
libs/core/util/source/: util.cpp
source/: convert_dream.cpp  main.cpp  save_land_my_design.cpp  save_land_time.cpp  save_main_field.cpp  save_npc.cpp  save_npc_house_list.cpp  save_player_house_list.cpp  save_shop.cpp  save_struct.cpp  savefile.cpp  smmh_paths_by_revision.cpp  template_check.cpp  util.cpp
tools/: CMakeLists.txt  save_offset_extractor.cpp  smmh_paths_by_revision.cpp
tools/save_offset_extractor/: CMakeLists.txt  save_offset_extractor.cpp  smmh_paths_by_revision.cpp  smmh_paths_by_revision.hpp
